<resources>
    <string name="app_name">TryKotlin</string>
    <string name="pysch">пыщ</string>
    <string name="pusch">пущ</string>

    <!--User Details Fields-->
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="stars">Stars count</string>
    <string name="repos">Repository count</string>
    <!--User List Fields-->
    <string name="type">Type</string>
    <string name="not_user">no</string>
    <!--Repo List Fields-->
    <string name="id">Id</string>
    <string name="fullName">Repo Name</string>
    <string name="owner">Owner</string>
    <string name="is_private">Private</string>
    <string name="description">Description</string>
    <string name="created_at">Created at</string>
    <string name="language">Language</string>
    <string name="stargazers_count">Stargazers</string>

    <!--Pair-->
    <string name="denotation">Denotation</string>
    <string name="value">Value</string>

    <!--Buttons-->
    <string name="repo_button_text">Load Repo</string>
    <string name="info_button_text">Show Info</string>

    <!--Action settings menu-->
    <string name="logging">Logging</string>
    <string name="enter_token">Enter access token</string>
    <string name="show_token">Show current token</string>
    <string name="action_search">Search</string>

    <!--Alert Dialogs-->
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="current_token_title">Current access token</string>
    <string name="enter_token_title">Enter access token</string>
    <string name="enter_token_message">You can enter an access token to get additional information.</string>

    <!--SnackBar Error Handler-->
    <string name="no_data_available">No data available</string>
    <string name="error_401">Wrong token</string>
    <string name="error_404">Нет пользователя</string>
    <string name="error_no_connection">Нет сети</string>
    <string name="no_access">Нет доступа</string>
    <string name="not_found">Никого не найдено по такому запросу</string>

    <!--buttons-->
    <string name="first">First</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="last">Last</string>
    <string name="start_page_state">0</string>

</resources>
