<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_settings_logging"
        android:title="@string/logging"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_set_token"
        android:title="@string/enter_token"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings_get_token"
        android:title="@string/show_token"
        app:showAsAction="never" />

</menu>